Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29579

Connect engine ASAN failures

    XMLWordPrintable

Details

    Description

      ASAN failures reported by marko / buildbot (http://buildbot.askmonty.org/buildbot/builders/kvm-asan/builds/9035):

      ***Warnings generated in error logs during shutdown after running tests: connect.mysql_exec connect.mysql_discovery connect.zip connect.mrr connect.xml_mdev5261 connect.bson_udf connect.odbc_postgresql connect.fix connect.alter connect.ini connect.xml2_mult connect.odbc connect.tbl connect.alter_xml2 connect.vcol connect.xml2_mdev5261 connect.infoschema-9739 connect.mysql_grant connect.xcol connect.temporary connect.json_udf_bin connect.grant connect.datest connect.odbc_sqlite3_grant connect.xml_grant connect.rest connect.grant2 connect.xml2 connect.updelx2 connect.xml2_html connect.odbc_firebird connect.mul_new connect.xml2_zip connect.dir connect.infoschema2-9739 connect.dbf connect.xml_zip connect.odbc_sqlite3 connect.xml_html connect.occur connect.general connect.xml connect.pivot connect.fmt connect.mysql_new connect.mul connect.json_udf connect.xml_mult connect.null connect.bin connect.updelx connect.mysql_index connect.odbc_xls connect.csv connect.vec connect.odbc_oracle connect.upd connect.grant3 connect.ini_grant connect.unsigned connect.xml2_grant connect.alter_xml connect.endian connect.misc connect.index connect.mysql
       
      ==123608==ERROR: LeakSanitizer: detected memory leaks
      SUMMARY: AddressSanitizer: 465 byte(s) leaked in 15 allocation(s).
      

      This appears to be unrelated to the JSON leaks fixed previously.

      Attachments

        Issue Links

          Activity

            People

              TheLinuxJedi Andrew Hutchings (Inactive)
              TheLinuxJedi Andrew Hutchings (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.